# rawabs2rel

./: README.md  abs2rel.py  environment.yml  pyproject.toml  setup.cfg
