[metadata]
name = rawabs2rel
version = 1.1.0
author = Ameer Arsala
author_email = ameer.arsala03@gmail.com
description = A python script that traverses a whole package turning local absolute imports into relative ones.
keywords = parsing, imports, text, python, code, substitution, replacement, script, package,
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
url = https://github.com/AmeerArsala/rawabs2rel
project_urls =
    Source = https://github.com/AmeerArsala/rawabs2rel
    Bug Tracker = https://github.com/AmeerArsala/rawabs2rel/issues
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing

[options]
py_modules = rawabs2rel
python_requires = >=3.6

[options.entry_points]
console_scripts =
    rawabs2rel = rawabs2rel:rawabs2rel
